--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@v2.1.0
         with:
+          distribution: zulu
           java-version: 8
       - name: Build with Gradle
         run: ./gradlew build
