add: chmod +x gradlew

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,5 @@ jobs:
           distribution: zulu
           java-version: 8
       - name: Build with Gradle
-        run: ./gradlew build
+      - run: chmod +x gradlew
+      - run: ./gradlew build
