remove: chmod +x gradlew

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,4 @@ jobs:
           distribution: zulu
           java-version: 8
       - name: Build with Gradle
-        run: | 
-          chmod +x gradlew
-          ./gradlew build
+        run: ./gradlew build
