--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,7 @@ jobs:
           java-version: 8
       - name: Build with Gradle
         run: ./gradlew build
+      - name: Upload a jar
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          path: app/build/libs/app.jar
