--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 on:
   push:
     branches: [ master ]
@@ -22,4 +22,4 @@ jobs:
         uses: actions/upload-artifact@v2.2.4
         with:
           name: jar
-          path: app/build/libs/app.jar
+          path: app/build/libs/bot.jar
