--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
         uses: actions/upload-artifact@v2.2.4
         with:
           name: jar
-          path: app/build/libs/bot.jar
+          path: app/build/libs
