--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ UNSPLASH_ACCESS_KEY=
 DATABASE_URL=jdbc:mysql://localhost:3306/test
 DATABASE_USER=root
 DATABASE_PASSWORD=
+# create or none
+DDL-AUTO=create
