--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
         run: ./gradlew build
       - name: Remove app.jar
         run: rm app/build/libs/app.jar
-      - name: Create .env
+      - name: Create config.yml
         run: |
-          cp .env.example app/build/libs
-          mv app/build/libs/.env.example app/build/libs/.env
+          cp config.yml.example app/build/libs
+          mv app/build/libs/config.yml.example app/build/libs/config.yml
       - name: Create start.bat
         run: echo -e "@echo off\njava -jar bot.jar\nPAUSE" > app/build/libs/start.bat
       - name: Upload a release
